# minipj

./: .gitignore  .gitmessage.txt  README.md  constants.py  pyproject.toml  test.sh
.github/: checks.yaml
.github/workflows/: checks.yaml
accounts/: models.py  serializers.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
analytics/: models.py  tests.py
analytics/migrations/: 0001_initial.py  0002_initial.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
config/urls/: urls_dev.py
core/management/commands/: wait_for_db.py
notifications/: models.py  tests.py
notifications/migrations/: 0001_initial.py  0002_initial.py
transactions/: models.py  serializers.py  tests.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transactionhistory_account_id.py  0002_alter_transactionhistory_transaction_date.py
users/: admin.py  backends.py  models.py  permissions.py  serializer.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_nickname_alter_user_is_active_and_more.py
utils/: email.py
